k8/SingleServer.yaml
kind: Pod
apiVersion: v1
metadata:
  name: instantchat-app
  namespace: default # specify namespace
  labels:   # note: used by Service spec.selector
    app: instantchat-app
spec:
  containers:
    - name: instantchat-app
      image: swe99193/instantchat:latest
      ports:
      - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: instantchat-service
  namespace: default
spec:
  selector:
    app: instantchat-app
  type: NodePort  # proxy for exposing the service to the external
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 8080
      nodePort: 30030
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
spec:
  rules:
    - host: "instantchat.com"
      http:
        paths:
        # Monolith
          - pathType: Prefix
            path: /
            backend:
              service:
                name: instantchat-service
                port:
                  number: 8080
